# cit411-utils

./: .gitignore  README.md  pyproject.toml
cit411_utils/: __init__.py  data.py  files.py  net.py  text.py
docs/: api_review.md
tests/: conftest.py  test_cit411_utils.py
