[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cit411-utils"
version = "1.1.0"
description = "Lightweight Python utility library: text, data, file I/O, and HTTP helpers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Waqar Javed" }]
requires-python = ">=3.10"
keywords = ["utilities", "text", "data", "json", "http", "cit411"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["cit411_utils*"]
